# pointing-user-interface-hri

./: LICENSE  README.md
docker/pointing-user-interface/: Dockerfile  human_kinematics.yaml  scenario_1_real.yaml  scenario_1_sim.yaml  scenario_2_real.yaml  scenario_2_sim.yaml  scenario_3_real.yaml  scenario_3_sim.yaml  scenario_4_real.yaml  scenario_4_sim.yaml
docker/pointing-user-interface/code/: README.md
docker/pointing-user-interface/code/conveyor_gui/: CMakeLists.txt  package.xml  plugin.xml
docker/pointing-user-interface/code/conveyor_gui/scripts/: conveyor_gui
docker/pointing-user-interface/code/conveyor_gui/src/conveyor_gui/: conveyor_gui.py
docker/pointing-user-interface/code/conveyor_msgs/: CMakeLists.txt  package.xml
docker/pointing-user-interface/code/conveyor_pui/: package.xml  setup.cfg  setup.py
docker/pointing-user-interface/code/conveyor_utils/: package.xml  setup.cfg  setup.py
docker/pointing-user-interface/code/coppelia_scenes/: tutorial_scenario_3.ttt  tutorial_scenario_4.ttt
docker/pointing-user-interface/code/coppelia_vr/: ISSUES.md  TODO.md
docker/pointing-user-interface/code/iros/: README.md  package.xml  setup.cfg  setup.py
docker/pointing-user-interface/code/led_strip_msgs/: package.xml  (+1 more)
docker/pointing-user-interface/code/led_strip_utils/: package.xml  setup.cfg  setup.py
docker/pointing-user-interface/code/led_strip_utils/launch/: lab.launch  lab.yaml
docker/pointing-user-interface/code/led_strip_utils/led_strip_utils/: main.py
docker/real_world/: _main.launch  docker-compose.yml
docker/simulation/: Dockerfile  docker-compose-win.yml  docker-compose.yml
(+65 files in other folders)
